--- a/index-beauty.html
+++ b/index-beauty.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Jakub Kwarciński, portfolio, frontend developer, Kraków, html, css, javascript, websites, graphic design, bootstrap">
     <meta name="author" content="Jakub Kwarciński">
 
-    <title>Outside - Multipurpose personal page</title>
+    <title>Contos digitais</title>
 
     <!-- Lato Font -->
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
@@ -131,7 +131,18 @@
                         <div class="divider">//</div>
                     </div>
                     <div data-350="transform[swing]:translateY(0px);opacity[swing]:1" data-650="transform[swing]:translateY(-15px);opacity[swing]:0">
-                        <p class="lead">I'm Jessica - a frontend developer from beautiful city Cracow. I have over of 6 years of experience in developing web applications and websites. I specialize in creating elegant and smart HTML templates based on bootstrap.</p>
+                        <p class="lead">Em 1993 no dia 15 de julho, em uma cidade pequena o tempo estava com um ar meio estranho, como se fosse acontecer algo. E de fato aconteceu.
+                        No meio de uma avenida havia ocorrido um acidente que envolvia dois carros. Todas as pessoas estavam vivas, e o local estava cheio de reportes, bombeiros, ambulâncias e pessoas. Dentre essas pessoas estava Arthur um jovem de 19 anos muitíssimo curioso.
+                        Ele estava chocado ao ver aquela cena, e queria que seus irmãos ou seus pais viessem ver aquilo.
+                        Seus pais moravam no pico de uma montanha uma rua acima de onde havia ocorrido o acidente. Então para ir mais rápido Arthur montou em sua moto e foi com calma até sua casa, porém durante o caminho, um homem desconhecido cuspiu em sua jaqueta, e ao olhar o que foi aquilo e quem foi esqueceu de olhar para frente. E bateu na traseira de um ônibus. 
+                        Ele foi arremessado por dez metros de onde ele estava. Seu braço ficou com um osso para fora e a perna machucada. Como a cidade era pequena seu irmão mais velho estava passando quando viu Arthur no chão sangrando.  De imediato o irmão de Arthur foi chamar seu pai que estava em casa conversando com o vizinho.
+                        E enquanto seu irmão chamava seu pai, Arthur procurava algum meio de ajuda, ônibus, ambulância, polícia algo que pudesse tirá-lo ele de lá. Por coincidência um taxi passou no momento certo e ofereceu ajuda para Arthur. Como Arthur estava sangrando ele pediu para o motorista abrir o porta-malas para que ele não suje o carro. Mas assim que Arthur estava entrando no porta-malas do taxi como havia pedido, seu pai chegou com o fusca. E quando viu seu filho entrar no porta-malas como um objeto. Ficou muito irritado.
+                        -O que você está fazendo com meu filho?! -diz o pai com muita raiva- ele é um objeto por acaso?
+                        - Pai foi eu que pedi para ele me colocar aqui – diz Arthur um pouco fraco.
+                        Depois disso, Arthur é levado direto para o hospital e faz uma cirurgia em seu braço. Precisou levar cerca de 38 pontos. E sua perna só teve uma leve luxação.
+                        Depois de um tempo internado no hospital, Arthur teve uma pneumonia muito forte. E ficou mais tempo internado. 
+                        Quando finalmente saiu do hospital, Arthur teve que fazer várias sessões de fisioterapia para a mão e hoje em dia Arthur é um ótimo mecânico e tem uma família muito linda.
+</p>
                     </div>
                     <ul class="list-inline icons-list-square" data-400="transform[swing]:translateY(0px);opacity[swing]:1" data-750="transform[swing]:translateY(-15px);opacity[swing]:0">
                         <li>
