--- a/index-dark.html
+++ b/index-dark.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Jakub Kwarciński, portfolio, frontend developer, Kraków, html, css, javascript, websites, graphic design, bootstrap">
     <meta name="author" content="Jakub Kwarciński">
 
-    <title>Outside - Multipurpose personal page</title>
+    <title>Contos digitais</title>
 
     <!-- Lato Font -->
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
@@ -131,7 +131,16 @@
                         <div class="divider">//</div>
                     </div>
                     <div data-350="transform[swing]:translateY(0px);opacity[swing]:1" data-650="transform[swing]:translateY(-15px);opacity[swing]:0">
-                        <p class="lead">I'm Jessica - a frontend developer from beautiful city Cracow. I have over of 6 years of experience in developing web applications and websites. I specialize in creating elegant and smart HTML templates based on bootstrap.</p>
+                        <p class="lead">O ano era 1996, quando uma motorista chamada Elaine consegue seu primeiro carro, um fusca vermelho, com toda a documentação pronta. Elaine com muito entusiasmo e motivação vai se aventurar em sua primeira viagem pelo bairro para estrear seu novo carro e sua nova carteira, junto a suas três amigas:
+                        Fernanda sua amiga mais próxima, quase uma irmã e a mais corajosa, sentou-se no banco da frente de imediato. 
+                        Cristina sua irmã mais nova, medrosa se sentou no banco de trás.
+                        Já maria teve que sentar-se no banco de trás porque Fernanda já estava no banco da frente.
+                        E assim elas foram ao passeio de carro. Elaine vendo o tanque de seu carro quase vazio, procura o posto mais próximo. Ao tentar estacionar o carro para que possa ser abastecê-lo, Elaine o bate em um vaso que estava do lado da bomba de gasolina. Todas se assustam, mas riem pois não foi nada grave. Depois de colocar gasolina, continuam seu passeio pelo bairro.
+                        Todas estavam aproveitando muito o passeio até que Elaine entra em uma rua sem saída, muito íngreme e com um precipício cheio de pedras em seu final. Elaine como era iniciante no volante não ficou muito calma com aquilo, e suas amigas Cristina e maria não a ajudavam pois ficavam gritando desesperadamente. Então Elaine com medo e estressada mandou maria e Cristina se retirarem do carro, para que ela possa tentar sair de lá com mais tranquilidade. Fernanda ainda estava no carro junto com Elaine, mas não gritava igual suas outras amigas.
+                        Do lado de fora do carro maria e Cristina ficaram a observar Elaine retirar o carro daquele lugar. Com muito medo e assustadas de sua amiga cair precipício abaixo.
+                        Depois de uns vinte minutos na tentativa de subir de ré, Elaine conseguiu ter o impulso para que o carro tivesse força para subir a rua. Ao terminar de subir a rua, Elaine respirou fundo e chamou suas duas amigas para entrar no carro novamente, as duas muitíssimos assustadas, entraram e pediram para levarem para suas casas.
+                        Todas moravam na mesma rua, quase uma do lado da outra, e enquanto Elaine deixava suas amigas em casa, as mães delas se questionam o que havia acontecido, pois todas voltaram amareladas e mulatíssimas tensas. E Elaine dizia que essa viagem mostrou a vida de uma nova motorista.
+</p>
                     </div>
                     <ul class="list-inline icons-list-square" data-400="transform[swing]:translateY(0px);opacity[swing]:1" data-750="transform[swing]:translateY(-15px);opacity[swing]:0">
                         <li>
