--- a/index-light.html
+++ b/index-light.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Jakub Kwarciński, portfolio, frontend developer, Kraków, html, css, javascript, websites, graphic design, bootstrap">
     <meta name="author" content="Jakub Kwarciński">
 
-    <title>Outside - Multipurpose personal page</title>
+    <title>Contos digitais</title>
 
     <!-- Lato Font -->
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
@@ -131,7 +131,18 @@
                         <div class="divider">//</div>
                     </div>
                     <div data-350="transform[swing]:translateY(0px);opacity[swing]:1" data-650="transform[swing]:translateY(-15px);opacity[swing]:0">
-                        <p class="lead">I'm Jessica - a frontend developer from beautiful city Cracow. I have over of 6 years of experience in developing web applications and websites. I specialize in creating elegant and smart HTML templates based on bootstrap.</p>
+                        <p class="lead"> Tudo começou em 2020 no dia 16 de março em uma plena segunda-feira onde fomos avisados em que estávamos entrando em uma pandemia, mas poucos fazia questão de saber sobre o que se tratava e pensava que seria apenas um simples recesso de 15 dias que aliás hoje dia 11 do mês de junho do ano de 2021 faz exatamente 452 dias do início "da pandemia", um pouco mais que 1 ano e a partir desse momento foi onde começou a mostrar a verdadeira identidade do civid-19 em que o Brasil chega a 482.019 mortes em 17.210.969 casos confirmados (atualizado em 10 Junho 2021), E nesse meio tempo em que uma pessoa que chega a óbito e não tem direito a um simples velório ou então ao se despedir dos seus entes queridos. 
+                        Não temos nem se quer um prazo para o término dessa quarentena estamos sem ideia do que está por vir, não sabemos como dizer, não sabemos como me expressar, não conseguimos imaginar assim, as pessoas infelizmente têm um ciclo na vida para seguir... 
+                        Então, por mais que dentro esteja uma bagunça, nosso exterior vai continuar pleno. E de repente parece que o mundo está desabando bem debaixo dos nossos olhos. O primeiro sentimento é o desespero, Muitas vezes nos sentimos sem saída, nos perdemos no caminho e parecemos atolados em problemas. 
+
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ </p>
                     </div>
                     <ul class="list-inline icons-list-square" data-400="transform[swing]:translateY(0px);opacity[swing]:1" data-750="transform[swing]:translateY(-15px);opacity[swing]:0">
                         <li>
