--- a/index-medical.html
+++ b/index-medical.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Jakub Kwarciński, portfolio, frontend developer, Kraków, html, css, javascript, websites, graphic design, bootstrap">
     <meta name="author" content="Jakub Kwarciński">
 
-    <title>Outside - Multipurpose personal page</title>
+    <title>Contos digitais</title>
 
     <!-- Lato Font -->
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
@@ -131,7 +131,11 @@
                         <div class="divider">//</div>
                     </div>
                     <div data-350="transform[swing]:translateY(0px);opacity[swing]:1" data-650="transform[swing]:translateY(-15px);opacity[swing]:0">
-                        <p class="lead">I'm Jessica - a frontend developer from beautiful city Cracow. I have over of 6 years of experience in developing web applications and websites. I specialize in creating elegant and smart HTML templates based on bootstrap.</p>
+                        <p class="lead">Apesar dessa quarentena ter sido para conter o vírus, querendo ou não me trouxe mais perto da minha família já que eles trabalhavam muito e eu quase não os via.
+                        Minha mãe trabalha de manhã até a tarde e a noite ela faz faculdade, nem sempre ela tem tempo para conversar comigo, mas se esforçar em separar um momento com sua família, a mesma coisa com minha irmã, faz faculdade de manhã e trabalha de tarde até a noite. Quando todos estão livres fazemos sempre alguma novidade em família, mas em especial os almoços em família são os melhores.
+                        Sinto saudades de poder ver a família inteira se reunindo, conversando, brincando, é uma sensação boa. Acho que a melhor parte dessas reuniões é brincar com meus primos, quando éramos menores adorávamos aprontar.
+                        Quando éramos menores descobrimos que minha avó tinha medo de cobras e aproveitamos que tínhamos cobras de brinquedo para assustar ela, embrulhamos tudo em um saco de presente e convencemos meu primo de 2 anos a entregar para minha vó. Nós passamos dos limites, quando ela abriu o saco ela deu um grito enorme muito assustada, eu e meus primos rimos muito, mas nossos pais não gostaram nenhum um pouco. Passamos a tarde assustando-a com os brinquedos, no fundo fiquei com um pouco de dó, mas era engraçado ao mesmo tempo, no final recebemos uma bronca dos pais pela brincadeira e até hoje minha vó fica brava em lembrar sobre a brincadeira.
+</p>
                     </div>
                     <ul class="list-inline icons-list-square" data-400="transform[swing]:translateY(0px);opacity[swing]:1" data-750="transform[swing]:translateY(-15px);opacity[swing]:0">
                         <li>
