--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
         <div class="section-inner">
             <div class="container">
                 <div class="section-header">
-                    <h3>Contos <span class="main-color">Digitais</span></h3>
+                    <h3> <span class="main-color">ONDE TUDO COMEÇOU</span></h3>
                     <div class="divider">//</div>
                 </div>
                 <div class="special-text text-center">
-                    <p>ONDE TUDO COMEÇOU.</p>
+                    <p>Contos Digitais</p>
                 </div>
                 <div class="row">
                     <div class="col-sm-6 col-md-4">
