--- a/index-culinary.html
+++ b/index-culinary.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Jakub Kwarciński, portfolio, frontend developer, Kraków, html, css, javascript, websites, graphic design, bootstrap">
     <meta name="author" content="Jakub Kwarciński">
 
-    <title>Outside - Multipurpose personal page</title>
+    <title>Contos digitais</title>
 
     <!-- Lato Font -->
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
@@ -131,7 +131,18 @@
                         <div class="divider">//</div>
                     </div>
                     <div data-350="transform[swing]:translateY(0px);opacity[swing]:1" data-650="transform[swing]:translateY(-15px);opacity[swing]:0">
-                        <p class="lead">I'm Jessica - a frontend developer from beautiful city Cracow. I have over of 6 years of experience in developing web applications and websites. I specialize in creating elegant and smart HTML templates based on bootstrap.</p>
+                        <p class="lead">Dia 1/01/2020,Ano Novo
+                            Fogos de artifícios, pessoas sorrindo, abraços, música, festa, eu estava ansiosa pelo que esse ano iria me trazer, sonhos e metas na minha cabeça, era o momento em que tudo mudaria para melhor, foi o que pensei.
+                            Desde pequena eu me imaginava no futuro, estudando, com minha própria casa, trabalhando dando o meu melhor para garantir uma vida de conforto. Sempre me esforcei para conseguir aquilo que eu desejava; nunca fui de fazer amizade, nunca me encaixei em grupos e isso me fez uma criança solitária, por causa disso comecei a ter dificuldades para falar com pessoas, mas em compensação eu ocupava meu tempo lendo e escrevendo, imaginando a minha vida, planejando cada detalhe, isso me fez amadurecer mais rápido do que as pessoas da minha idade
+                            Naquele ano eu estava tão ansiosa pelas mudanças, em que finalmente iria me preparar para entrar em uma nova escola e tentar fazer amizades, procurar um emprego, selecionar a faculdade de acordo com meus gostos, estava tudo planejado!
+                            Mas tudo virou de ponta cabeça...A pandemia me atingiu a mim e ao mundo de uma forma inesperada jogando tudo por água abaixo, e de repente eu não sabia o que fazer nessa situação.
+                            Comecei a ter dificuldades nas aulas online como nunca, a minha preocupação com a Etec só aumentava, todos os meus hábitos de ler, escrever, estudar se foram! O que eu faço? Como resolvo isso?
+                            E de repente várias pessoas começaram a adoecer e morrer por causa do covid-19,hospitais cheios , pessoas usando máscaras, familiares morrendo....eu só pensava quando isso ia acabar.
+                            O que vai acontecer comigo daqui para a frente? eu mudei tanto em apenas 1ano de quarentena, será que eu realmente eu mudei para a melhor?
+                            Eu ainda não sei como responder isso, mas com tudo isso acontecendo até agora 2021 aprendi a valorizarmos as pessoas a nossa volta pois não sabemos quando elas vão embora e que nem tudo sai como planejado, às vezes os problemas aparecem para criarmos maturidade e persistência em fazer aquilo que tanto deseja.
+                            Ainda tenho muitas coisas para melhorar e faz parte do processo reconhecer as nossas falhas para podermos mudar nossos hábitos.
+                            Eu ainda continuo planejando meu futuro e essa quarentena começou a motivar mais a continuar lutando para alcançar meus sonhos.
+</p>
                     </div>
                     <ul class="list-inline icons-list-square" data-400="transform[swing]:translateY(0px);opacity[swing]:1" data-750="transform[swing]:translateY(-15px);opacity[swing]:0">
                         <li>
