--- a/index-default.html
+++ b/index-default.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Jakub Kwarciński, portfolio, frontend developer, Kraków, html, css, javascript, websites, graphic design, bootstrap">
     <meta name="author" content="Jakub Kwarciński">
 
-    <title>Outside - Multipurpose personal page</title>
+    <title>Contos digitais</title>
 
     <!-- Lato Font -->
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
@@ -131,7 +131,9 @@
                         <div class="divider">//</div>
                     </div>
                     <div data-350="transform[swing]:translateY(0px);opacity[swing]:1" data-650="transform[swing]:translateY(-15px);opacity[swing]:0">
-                        <p class="lead">I'm Jessica - a frontend developer from beautiful city Cracow. I have over of 6 years of experience in developing web applications and websites. I specialize in creating elegant and smart HTML templates based on bootstrap.</p>
+                        <p class="lead"> Antigamente entre 1980 a 2021, era uma família muito nobre formada por, pais e 5 filhos, nós morávamos todos juntos em um sítio no interior, morávamos em uma casa muito simples bem longe da cidade e sempre fomos bem carentes, não existia energia elétrica, não tinha água encanada muito menos uma escola para ensino básico no sitio, para ir para a cidade estudar tínhamos que ir a cavalo, foi mais de 7 anos assim até que eu possa ter terminado o 8° ano, mas nada nos deixaria ficar menos feliz. 
+                         Ao completar 17 anos de idade, conheci um garoto em uma festa onde ele mudou minha vida por completa, começamos a namorar, namoramos por aproximadamente 4 anos, casamos, após 1 ano casados ele se mudou para São Paulo a procura de trabalho, passou menos de um mês eu decidi que também iria morar com ele em São Paulo, nosso sonho desde quando casamos seria ter dois filhos uma homem e uma mulher, mas por complicações não conseguir ter filho por 7 anos até que chegou o meu primeiro filho(Francisco) e por conta de ser uma gravides de risco ele nasceu prematuro de 7 meses, em menos de um anos do nascimento do meu primeiro filho descobrimos que eu estava grávida novamente do meu segundo filho(kauê) achávamos que fosse mulher mas não foi, depois de 1 ano e 5 meses eu e meu esposo decidimos que teríamos outro filho(Pedro) ao tentar que fosse mulher, mas também não tinha sido dessa vez e acabamos decidido que seria o nosso último filho, e no final acabou que tivemos 3 filhos homens, e vivemos muitos felizes. 
+                        </p>
                     </div>
 
                     <ul class="list-inline icons-list-square" data-400="transform[swing]:translateY(0px);opacity[swing]:1" data-750="transform[swing]:translateY(-15px);opacity[swing]:0">
