--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             <div class="portfolio-image-container">
                                 <div class="portfolio-shape"></div>
                                 <a href="index-default.html" title="Default version">
-                                    <img class="img-responsive" src="img/preview-default.png" alt="Default version">
+                                    <img class="img-responsive" src="img/section-1-bg (2).jpg" alt="Default version">
                                 </a>
                             </div>
                             <h4 class="portfolio-header">
@@ -118,7 +118,7 @@
                             <div class="portfolio-image-container">
                                 <div class="portfolio-shape"></div>
                                 <a href="index-light.html" title="Light version">
-                                    <img class="img-responsive" src="img/preview-light.png" alt="Light version">
+                                    <img class="img-responsive" src="img/section-1-bg (2).jpg" alt="Light version">
                                 </a>
                             </div>
                             <h4 class="portfolio-header">
@@ -134,7 +134,7 @@
                             <div class="portfolio-image-container">
                                 <div class="portfolio-shape"></div>
                                 <a href="index-dark.html" title="Dark version">
-                                    <img class="img-responsive" src="img/preview-dark.png" alt="Dark version">
+                                    <img class="img-responsive" src="img/section-1-bg (2).jpg" alt="Dark version">
                                 </a>
                             </div>
                             <h4 class="portfolio-header">
@@ -150,7 +150,7 @@
                             <div class="portfolio-image-container">
                                 <div class="portfolio-shape"></div>
                                 <a href="index-beauty.html" title="Beauty version">
-                                    <img class="img-responsive" src="img/preview-beauty.png" alt="Beauty version">
+                                    <img class="img-responsive" src="img/section-1-bg (2).jpg" alt="Beauty version">
                                 </a>
                             </div>
                             <h4 class="portfolio-header">
@@ -166,7 +166,7 @@
                             <div class="portfolio-image-container">
                                 <div class="portfolio-shape"></div>
                                 <a href="index-medical.html" title="Medical version">
-                                    <img class="img-responsive" src="img/preview-medical.png" alt="Medical version">
+                                    <img class="img-responsive" src="img/section-1-bg (2).jpg" alt="Medical version">
                                 </a>
                             </div>
                             <h4 class="portfolio-header">
@@ -181,7 +181,7 @@
                             <div class="portfolio-image-container">
                                 <div class="portfolio-shape"></div>
                                 <a href="index-culinary.html" title="Culinary version">
-                                    <img class="img-responsive" src="img/preview-culinary.png" alt="Culinary version">
+                                    <img class="img-responsive" src="img/section-1-bg (2).jpg" alt="Culinary version">
                                 </a>
                             </div>
                             <h4 class="portfolio-header">
