--- a/index-beauty.html
+++ b/index-beauty.html
@@ -62,22 +62,7 @@
     </div>
 
     <div class="sidebar">
-        <a class="sidebar-switcher" href="#" title="Color switcher">
-            <i class="fa fa-gear"></i>
-        </a>
-        <div class="sidebar-content">
-            <h4 class="sidebar-header">Color switcher</h4>
-            <a href="#" class="color-switcher bg-yellow" data-color="yellow"></a>
-            <a href="#" class="color-switcher bg-gold" data-color="gold"></a>
-            <a href="#" class="color-switcher bg-pink" data-color="pink"></a>
-            <a href="#" class="color-switcher bg-orange" data-color="orange"></a>
-            <a href="#" class="color-switcher bg-brown" data-color="brown"></a>
-            <a href="#" class="color-switcher bg-red" data-color="red"></a>
-            <a href="#" class="color-switcher bg-violet" data-color="violet"></a>
-            <a href="#" class="color-switcher bg-silver" data-color="silver"></a>
-            <a href="#" class="color-switcher bg-green" data-color="green"></a>
-            <a href="#" class="color-switcher bg-blue" data-color="blue"></a>
-        </div>
+
     </div>
 
     <div class="navbar navbar-inverse navbar-fixed-top" id="navbar-main">
@@ -130,10 +115,6 @@
                     <div data-250="transform[swing]:translateY(0px);opacity[swing]:1" data-550="transform[swing]:translateY(-15px);opacity[swing]:0">
                         <div class="divider">//</div>
                     </div>
-                    <div>
-                   <img class="img-responsive" src="img/preview-light.png" alt="Light version">
-
-                    </div>
                     <div data-350="transform[swing]:translateY(0px);opacity[swing]:1" data-650="transform[swing]:translateY(-15px);opacity[swing]:0">
                         <p class="lead">Em 1993 no dia 15 de julho, em uma cidade pequena o tempo estava com um ar meio estranho, como se fosse acontecer algo. E de fato aconteceu.
                         No meio de uma avenida havia ocorrido um acidente que envolvia dois carros. Todas as pessoas estavam vivas, e o local estava cheio de reportes, bombeiros, ambulâncias e pessoas. Dentre essas pessoas estava Arthur um jovem de 19 anos muitíssimo curioso.
@@ -150,9 +131,9 @@
                     </div>
                     <ul class="list-inline icons-list-square" data-400="transform[swing]:translateY(0px);opacity[swing]:1" data-750="transform[swing]:translateY(-15px);opacity[swing]:0">
                         <li>
-                            <a href="https://github.com/projetomariletiped" class="icon-circle-container">
-                            <i class="fa fa-github"></i>
-                        </a>
+                            <a href="https://github.com/kwarc87" class="icon-circle-container" title="GitHub">
+                                <i class="fa fa-github"></i>
+                            </a>
                         </li>
                     </ul>
 
