--- a/index-medical.html
+++ b/index-medical.html
@@ -62,22 +62,7 @@
     </div>
 
     <div class="sidebar">
-        <a class="sidebar-switcher" href="#" title="Color switcher">
-            <i class="fa fa-gear"></i>
-        </a>
-        <div class="sidebar-content">
-            <h4 class="sidebar-header">Color switcher</h4>
-            <a href="#" class="color-switcher bg-yellow" data-color="yellow"></a>
-            <a href="#" class="color-switcher bg-gold" data-color="gold"></a>
-            <a href="#" class="color-switcher bg-pink" data-color="pink"></a>
-            <a href="#" class="color-switcher bg-orange" data-color="orange"></a>
-            <a href="#" class="color-switcher bg-brown" data-color="brown"></a>
-            <a href="#" class="color-switcher bg-red" data-color="red"></a>
-            <a href="#" class="color-switcher bg-violet" data-color="violet"></a>
-            <a href="#" class="color-switcher bg-silver" data-color="silver"></a>
-            <a href="#" class="color-switcher bg-green" data-color="green"></a>
-            <a href="#" class="color-switcher bg-blue" data-color="blue"></a>
-        </div>
+       
     </div>
 
     <div class="navbar navbar-inverse navbar-fixed-top" id="navbar-main">
@@ -139,6 +124,10 @@
                     </div>
                     <ul class="list-inline icons-list-square" data-400="transform[swing]:translateY(0px);opacity[swing]:1" data-750="transform[swing]:translateY(-15px);opacity[swing]:0">
                         <li>
+                            <a href="https://github.com/kwarc87" class="icon-circle-container" title="GitHub">
+                                <i class="fa fa-github"></i>
+                            </a>
+                        </li><li>
                            <a href="https://github.com/projetomariletiped" class="icon-circle-container">
                             <i class="fa fa-github"></i>
                         </a>
