--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
                         <div class="portfolio-item">
                             <div class="portfolio-image-container">
                                 <div class="portfolio-shape"></div>
-                                <a href="index-default.html" title="Default version">
-                                    <img class="img-responsive" src="img/section-1-bg (2).jpg" alt="Default version">
+                                <a href="index-default.html" title="Contos">
+                                    <img class="img-responsive" src="img/section-1-bg.jpg" alt="Default version">
                                 </a>
                             </div>
                             <h4 class="portfolio-header">
@@ -117,8 +117,8 @@
                         <div class="portfolio-item">
                             <div class="portfolio-image-container">
                                 <div class="portfolio-shape"></div>
-                                <a href="index-light.html" title="Light version">
-                                    <img class="img-responsive" src="img/section-1-bg (2).jpg" alt="Light version">
+                                <a href="index-light.html" title="Contos">
+                                    <img class="img-responsive" src="img/section-2-bg.jfif" alt="Light version">
                                 </a>
                             </div>
                             <h4 class="portfolio-header">
@@ -133,8 +133,8 @@
                         <div class="portfolio-item">
                             <div class="portfolio-image-container">
                                 <div class="portfolio-shape"></div>
-                                <a href="index-dark.html" title="Dark version">
-                                    <img class="img-responsive" src="img/section-1-bg (2).jpg" alt="Dark version">
+                                <a href="index-dark.html" title="Contos">
+                                    <img class="img-responsive" src="img/section-5-bg.jfif" alt="Dark version">
                                 </a>
                             </div>
                             <h4 class="portfolio-header">
@@ -149,8 +149,8 @@
                         <div class="portfolio-item">
                             <div class="portfolio-image-container">
                                 <div class="portfolio-shape"></div>
-                                <a href="index-beauty.html" title="Beauty version">
-                                    <img class="img-responsive" src="img/section-1-bg (2).jpg" alt="Beauty version">
+                                <a href="index-beauty.html" title="Contos">
+                                    <img class="img-responsive" src="img/section-6-bg.jfif" alt="Beauty version">
                                 </a>
                             </div>
                             <h4 class="portfolio-header">
@@ -165,8 +165,8 @@
                         <div class="portfolio-item">
                             <div class="portfolio-image-container">
                                 <div class="portfolio-shape"></div>
-                                <a href="index-medical.html" title="Medical version">
-                                    <img class="img-responsive" src="img/section-1-bg (2).jpg" alt="Medical version">
+                                <a href="index-medical.html" title="Contos">
+                                    <img class="img-responsive" src="img/section-4-bg.jfif" alt="Medical version">
                                 </a>
                             </div>
                             <h4 class="portfolio-header">
@@ -180,8 +180,8 @@
                         <div class="portfolio-item">
                             <div class="portfolio-image-container">
                                 <div class="portfolio-shape"></div>
-                                <a href="index-culinary.html" title="Culinary version">
-                                    <img class="img-responsive" src="img/section-1-bg (2).jpg" alt="Culinary version">
+                                <a href="index-culinary.html" title="Contos">
+                                    <img class="img-responsive" src="img/section-3-bg.jfif" alt="Culinary version">
                                 </a>
                             </div>
                             <h4 class="portfolio-header">
