--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
     
 
     <div class="brand-container">
-        <a class="brand" href="index.html" title="contos">
+        <a class="brand" href="https://projetomariletiped.github.io/partermarile/" title="contos">
             <span class="title">
+                
                 Volte Aqui
             </span>
             <span class="icon icon-arrows-glide"></span>
